# NumberNet

./: .gitignore  README.md  pyproject.toml  requirements.txt
NumberNet/: dataset.py  model.py
scripts/: predict.py  predict_image.py  read_image.py  train_model.py
tests/: test_model.py
