[tool.poetry]
name = "numbernet"
version = "0.1.0"
description = "PyTorch project to recognize digits from images (CNN)"
authors = ["Krystian Andrzejak <krystianandrzejak47@gmail.com>"]
readme = "README.md"
packages = [{ include = "numbernet" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
torchvision = "^0.17.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
ruff = "^0.4.3"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
ignore = ["F841"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
